build_err.txt
In file included from kernel/kalloc.c:8:
kernel/riscv.h: In function ‘r_stimecmp’:
kernel/riscv.h:140:1: error: version control conflict marker in file
  140 | <<<<<<< HEAD
      | ^~~~~~~
kernel/riscv.h: In function ‘w_stimecmp’:
kernel/riscv.h:148:1: error: version control conflict marker in file
  148 | =======
      | ^~~~~~~
kernel/riscv.h:150:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  150 |   return x;
      |          ^
kernel/riscv.h:145:20: note: declared here
  145 | static inline void w_stimecmp(uint64 x) {
      |                    ^~~~~~~~~~
kernel/riscv.h: At top level:
kernel/riscv.h:154:1: error: redefinition of ‘w_stimecmp’
  154 | w_stimecmp(uint64 x)
      | ^~~~~~~~~~
kernel/riscv.h:145:20: note: previous definition of ‘w_stimecmp’ with type ‘void(uint64)’ {aka ‘void(long unsigned int)’}
  145 | static inline void w_stimecmp(uint64 x) {
      |                    ^~~~~~~~~~
kernel/riscv.h: In function ‘w_stimecmp’:
kernel/riscv.h:158:1: error: version control conflict marker in file
  158 | >>>>>>> syscall
      | ^~~~~~~
kernel/riscv.h: In function ‘r_menvcfg’:
kernel/riscv.h:165:1: error: version control conflict marker in file
  165 | <<<<<<< HEAD
      | ^~~~~~~
kernel/riscv.h: In function ‘w_menvcfg’:
kernel/riscv.h:173:1: error: version control conflict marker in file
  173 | =======
      | ^~~~~~~
kernel/riscv.h:175:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
  175 |   return x;
      |          ^
kernel/riscv.h:170:20: note: declared here
  170 | static inline void w_menvcfg(uint64 x) {
      |                    ^~~~~~~~~
kernel/riscv.h: At top level:
kernel/riscv.h:179:1: error: redefinition of ‘w_menvcfg’
  179 | w_menvcfg(uint64 x)
      | ^~~~~~~~~
kernel/riscv.h:170:20: note: previous definition of ‘w_menvcfg’ with type ‘void(uint64)’ {aka ‘void(long unsigned int)’}
  170 | static inline void w_menvcfg(uint64 x) {
      |                    ^~~~~~~~~
kernel/riscv.h: In function ‘w_menvcfg’:
kernel/riscv.h:183:1: error: version control conflict marker in file
  183 | >>>>>>> syscall
      | ^~~~~~~
cc1: all warnings being treated as errors
make: *** [Makefile:136: kernel/kalloc.o] Error 1
